# try-rust-on-heroku

./: Cargo.toml  Procfile
.github/workflows/: build.yml  dev-release.yml
src/: main.rs
