[package]
name = "try-rust-on-heroku"
version = "0.1.0"
authors = ["maxjeffos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
actix-session = "0.4"
actix-utils = "3"
env_logger = "0.9"
